samples/_failures_safe/1761303279_179580_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53fed317.c: In function ‘main’:
./samples/SAFE/__tmp_53fed317.c:152:28: error: missing terminating " character
  152 |                     printf("[%s
      |                            ^~~~
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected expression at end of input
  152 |                     printf("[%s
      |                     ^~~~~~
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53fed317.c:152:21: error: expected declaration or statement at end of input
